# gstreamer_launch

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: .project  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  gstreamer_launch_android_native.cpp
android/src/main/java/com/bardo91/gstreamer_launch/: GstreamerLaunchPlugin.java
android/src/main/kotlin/com/example/gstreamer_launch/: GstreamerLaunchPlugin.kt
example/: .metadata  README.md  pubspec.yaml
example/android/: .project
example/android/app/: .project  build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/bardo91/gstreamer_launch_example/: MainActivity.java
example/android/app/src/main/kotlin/com/example/gstreamer_launch_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: GstreamerCustomPainter.dart  gstreamer_launch.dart
linux/: CMakeLists.txt  gstreamer_launch_plugin.cc
linux/cmake/modules/: FindGStreamer.cmake
linux/include/gstreamer_launch/: gstreamer_launch_plugin.h
test/: gstreamer_launch_test.dart
windows/: CMakeLists.txt  gstreamer_launch_plugin.cpp
windows/include/gstreamer_launch/: gstreamer_launch_plugin.h
